Bug 58125 - [UI] Comment marks not hidden when column is hidden
Summary: [UI] Comment marks not hidden when column is hidden
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: low trivial
Assignee: Justin L
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords: bibisected, regression
: 133153 (view as bug list)
Depends on:
Blocks: Calc-Comments
  Show dependency treegraph
 
Reported: 2012-12-11 09:59 UTC by Winfried Donkers
Modified: 2021-12-17 22:06 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document with column c hidden, but comment mark visible (7.26 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-12-11 09:59 UTC, Winfried Donkers
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Winfried Donkers 2012-12-11 09:59:50 UTC
Created attachment 71324 [details]
sample document with column c hidden, but comment mark visible

When a cell has a comment, a red 'dot' at the top right corner of the cell indicates that a comment exists.
When hiding the column with a cell that has a comment, the red 'dot' is not hidden.
See attachment.

steps to reproduce:
-open new calc document
-add comment to cell c2
-cell c2 displays the red 'dot'
-select column c (or b, c, d)
-hide column(s)
-the red dot is not in cell B2 (or A2 when columns b. c, d are hidden)

The problem does not occur when hiding rows.

The problem also occurs on master.
Comment 1 Buovjaga 2014-11-07 14:40:28 UTC
Confirmed.

Win 7 64-bit Version: 4.4.0.0.alpha1+
Build ID: 8b21b5cbe78945b27525b4ce78ae3d981f90590f
TinderBox: Win-x86@39, Branch:master, Time: 2014-11-06_03:55:51
Comment 2 QA Administrators 2016-09-20 10:32:21 UTC Comment hidden (noise)
Comment 3 Winfried Donkers 2016-09-20 10:59:49 UTC
Problem still present with
Win 7 64-bit Version 5.1.5.2
Linux 64-bit master (5.3.0.0.alpha0+)
Comment 4 QA Administrators 2017-11-30 06:26:59 UTC Comment hidden (noise)
Comment 5 Winfried Donkers 2017-11-30 06:50:30 UTC
Problem still present with
Win 10 64-bit Version 5.4.3.2
Linux 64-bit master (6.1)
Comment 6 Xisco Faulí 2018-01-17 12:48:41 UTC
@Timur, is there any reason why this is marked as a regression ?
Comment 7 Timur 2018-01-17 14:57:18 UTC
I marked as regression from 3.6 because it doesn't happen with 3.5.7.
Comment 8 Muhammet Kara 2018-06-04 08:22:19 UTC
 dea64da10b84bca6258ce739be79c32d90e28f15 is the first bad commit
commit dea64da10b84bca6258ce739be79c32d90e28f15
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Thu Apr 26 02:40:08 2012 +0200
    source-hash-5af303c0cd4d46c459c6b90712843967d716c866
    
    commit 5af303c0cd4d46c459c6b90712843967d716c866
    Author:     Stephan Bergmann <sbergman@redhat.com>
    AuthorDate: Thu Mar 1 17:35:47 2012 +0100
    Commit:     Stephan Bergmann <sbergman@redhat.com>
    CommitDate: Thu Mar 1 17:35:47 2012 +0100
    
        -Werror=unused-variable
:100644 100644 30bbabe7f619a8a6d5bcd0ab0c1143e6354d6083 c352940df0e2d513f7f1c4e5744b95d63d4f18fb M	ccache.log
:100644 100644 8cfdf1cbbc71627c3e5f984d45e1fd61b78f17f0 cae646cc761327f27a5b4c44e5fb694d2b8c3e4f M	commitmsg
:100644 100644 5e8240e450c7dddaf8173ef7d9d881fb80f8dd97 baa2108091e01071bbe1877a797911fc416438c4 M	dev-install.log
:100644 100644 f2747a181d8e56dded5d54c719af73665219cdea 56f0b4b9e0598ec9ba50aa295103a9bd575657f8 M	make.log
:040000 040000 0a902f7d4e2923ec501ef6a482475f60943ce88a 64ad2f785665a03cb36af70fd4b16afe64dc97de M	opt
Comment 9 Stephan Bergmann 2018-06-05 13:05:06 UTC Comment hidden (obsolete)
Comment 10 Muhammet Kara 2018-06-05 13:06:24 UTC
(In reply to Stephan Bergmann from comment #9)
> (In reply to Muhammet Kara from comment #8)
> > dea64da10b84bca6258ce739be79c32d90e28f15 is the first bad commit
> 
> ...in which bibisect repo?

43all
Comment 11 Stephan Bergmann 2018-06-05 14:40:16 UTC
...which lumps multiple source commits into one bibisect commit, so with

> $ git -C bibisect-43all log -2 dea64da10b84bca6258ce739be79c32d90e28f15
> commit dea64da10b84bca6258ce739be79c32d90e28f15 (tag: source-hash-5af303c0cd4d46c459c6b90712843967d716c866)
> Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
> Date:   Thu Apr 26 02:40:08 2012 +0200
> 
>     source-hash-5af303c0cd4d46c459c6b90712843967d716c866
>     
>     commit 5af303c0cd4d46c459c6b90712843967d716c866
>     Author:     Stephan Bergmann <sbergman@redhat.com>
>     AuthorDate: Thu Mar 1 17:35:47 2012 +0100
>     Commit:     Stephan Bergmann <sbergman@redhat.com>
>     CommitDate: Thu Mar 1 17:35:47 2012 +0100
>     
>         -Werror=unused-variable
> 
> commit 586a46cf017f9fd8667ed0d42841977deec37848 (tag: source-hash-b9b8ae8a484471ce067ad09dc96cad0d87285a6f)
> Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
> Date:   Thu Apr 26 01:39:56 2012 +0200
> 
>     source-hash-b9b8ae8a484471ce067ad09dc96cad0d87285a6f
>     
>     commit b9b8ae8a484471ce067ad09dc96cad0d87285a6f
>     Author:     Tor Lillqvist <tlillqvist@suse.com>
>     AuthorDate: Tue Feb 28 21:39:27 2012 +0200
>     Commit:     Tor Lillqvist <tlillqvist@suse.com>
>     CommitDate: Wed Feb 29 20:20:10 2012 +0200
>     
>         Don't generate Thumb code to avoid ld bug in NDK r7b

the range of relevant source commits covers the following 64 commits:

> $ git -C lo/core log --oneline b9b8ae8a484471ce067ad09dc96cad0d87285a6f..5af303c0cd4d46c459c6b90712843967d716c866
> 5af303c0cd4d -Werror=unused-variable
> a0cd57b92683 Remove SvxFontTable and use std::vector instead
> 085e8a07e61e fdo#45671 calc cell background color simplified code for split button
> 54442c917d7b WaE: initialization order
> 856ad69ffe8b work around ICE with mingw32-gcc-4.7.0-0.5.20120224
> 2fb1fe6c24a6 get redland built with mingw
> 2824a8b40289 get rasqal built with mingw
> b8b088daf8c9 get raptor built with mingw
> b60cf256b76c do not include external stuff into namespace
> a5c891f59e7d add test case for XSpreadsheetDocument
> 956c9d1775b1 there is no need any more for CloneWith[out]Note
> dce056ec03bc LOCAGICAL->LOGICAL
> 6c3699b4a6be I really only want to know if IsSymbolFont was toggled
> 51216852e043 WaE: use of logical '||' with constant operand
> f9883185a4ac WaE: equality comparison with extraneous parentheses
> baf0ba0798ef WaE: expression result unused
> 2c3ad171e94d Fix what seems to be a copy/paste error: initialising a field with itself
> 3a08fd3b3765 WaE: unused variable
> 8c99b935dbe8 WaE: is abstract but has non-virtual destructor
> fa4a1717b389 String types have changed in base class
> 63f9ca85665b WaE: class 'CGRect' was previously declared [in SDK headers] as a struct
> cb1f5749c6e2 WaE: 'SalData' defined as a struct here but previously declared as a class
> 8ffef2fbae86 WaE: extra tokens at end of #endif directive
> 944abe0d9fc0 WaE: non-virtual destructor
> 491592015bc9 implement scrolling with mouse in Object Catalog dialog
> 4022a834b55c Object Catalog button now toggles display of the dialog
> efd4db1e6b20 make button label and dialog title consistent (Object Catalog)
> 7b860d497060 fix crash using instances dialog of dataform navigator fdo#44816
> f7fbeac4cbb7 use the correct db range for the copy, fdo#46712
> 1b93146d442b don't try to update the range names twice
> e25ce6abc572 use correct source table
> 89f7da6d23eb Revert "Use internal libxml for Mac release builds."
> a5394f98f2b6 raptor: make the entities patch work on older libxml2 versions
> 456a59b24d4b fix RTF import of drawing objects when there is no shape to send
> f87e486d298d WaE: C4265: class has virtual functions, but destructor is not virtual
> 2eeef79b7824 callcatcher: update list
> 1431c95d19cd now restore and use reduced UnlockFile and UnlockRange impls
> 05a8216d03b5 STAR_ENABLE_FILE_LOCKING was a secret
> 7029ccec25bc testcase for fdo#46662
> 58272b98319c fix some iterator misuse in the new notes handling
> 373394c887f2 only delete notes if correct flag is passed
> 247be4c2e6e3 clean-up sw's filters-test
> d1e5860bc001 Translate German comments.
> 2744ad999be9 Compare char* with string literal via strcmp
> 2cbabb5e6e0d Make it unexecutable
> e5f5ab57a124 Translate German comments, fix some whitespace
> ebe26f72e903 WaE: 'unused' attribute ignored when parsing type
> 4b72dd8da22d WaE: unused function 'liangBarskyClipT'
> e3b45e857bce Add more libs
> 7a0b72146218 Filter out options that Clang doesn't have
> fead7eb86f0e Some initial DISABLE_SCRIPTING ifdefs
> 6d33801b4498 Build libsb with a few dummy classes also for --disable-scripting
> c57f1a0dfd50 Modify iOS device example to use Clang
> 084a54e87b25 WaE: unused parameter
> c1dc38282b42 WaE: unused parameter
> 4d94ce58932d Adapt LanguageTool.oxt to removed SpellAndGrammarDialogImage_HC
> fe5fcca2536a REMOVE_FILES for cases where files need to be removed from external sources
> 979cc1c00982 some more fixes to get note handling back
> 33849f3fca52 remove mpNote: fix copy/paste
> c06dbbe7594c remove mpNote from ScBaseCell
> a6d65732f14e fix nsplugin to create correct com.sun.star.ucb.SimpleFileAccess instance
> 0c6d89941118 fdo#46340: fix crash in SdrGrafObj::getInputStream:
> ab29d941b39d Typo fps_kde4 -> vclplug_kde4
> a0238fda86e1 bin/distro-install*: source config_host.mk instead of Env.Host.sh
Comment 12 Stephan Bergmann 2018-06-05 14:55:41 UTC
...where one bunch of commits that might be relevant is

> commit 979cc1c00982f5cc20ad7da5276efe3ccb0bc36d
> Author: Markus Mohrhard <markus.mohrhard@googlemail.com>
> Date:   Wed Feb 29 23:36:40 2012 +0100
> 
>     some more fixes to get note handling back
>     
>     there are still some issues that will be addressed in later commits
> 
>  sc/inc/cell.hxx                |  2 +-
>  sc/source/core/data/cell.cxx   |  2 +-
>  sc/source/core/data/column.cxx |  4 ++--
>  sc/source/core/data/table2.cxx | 51 ++++++++++++++++++++++++++++++++++++++++++++++++---
>  sc/source/core/data/table6.cxx |  2 +-
>  sc/source/ui/view/output.cxx   |  9 ++-------
>  6 files changed, 55 insertions(+), 15 deletions(-)
> 
> commit 33849f3fca52251eb7773802c78b6d8501921c37
> Author: Markus Mohrhard <markus.mohrhard@googlemail.com>
> Date:   Tue Feb 28 03:21:10 2012 +0100
> 
>     remove mpNote: fix copy/paste
> 
>  sc/inc/postit.hxx              |  2 ++
>  sc/source/core/data/postit.cxx | 17 ++++++++++++++++-
>  sc/source/core/data/table2.cxx |  6 +++++-
>  sc/source/ui/view/output.cxx   |  1 -
>  4 files changed, 23 insertions(+), 3 deletions(-)
> 
> commit c06dbbe7594c2a0b5a5b19f8e183d9c421e6e094
> Author: Markus Mohrhard <markus.mohrhard@googlemail.com>
> Date:   Thu Feb 23 23:36:49 2012 +0100
> 
>     remove mpNote from ScBaseCell
> 
>  sc/inc/cell.hxx                                              |  18 +--------------
>  sc/inc/column.hxx                                            |  17 ++++----------
>  sc/inc/document.hxx                                          |  16 +++++--------
>  sc/inc/postit.hxx                                            |  55 +++++++++++++++++++++++++++++++++++++++++++
>  sc/inc/table.hxx                                             |  14 ++++-------
>  sc/qa/unit/filters-test.cxx                                  |   2 +-
>  sc/qa/unit/ucalc.cxx                                         |  18 +++++++--------
>  sc/source/core/data/cell.cxx                                 |  40 ++------------------------------
>  sc/source/core/data/column.cxx                               |   7 +-----
>  sc/source/core/data/column2.cxx                              |  37 ++++++++++-------------------
>  sc/source/core/data/column3.cxx                              | 138 ++++++++----------------------------------------------------------------------------------------------------
>  sc/source/core/data/document.cxx                             |  50 +++++++---------------------------------
>  sc/source/core/data/drwlayer.cxx                             |   2 +-
>  sc/source/core/data/postit.cxx                               | 192 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
>  sc/source/core/data/table1.cxx                               |  69 +++++++++++++++++++++++++++++++++++++++++++++++-------
>  sc/source/core/data/table2.cxx                               | 121 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----------------------------
>  sc/source/core/data/table3.cxx                               |  17 ++++++++++++++
>  sc/source/core/data/table6.cxx                               |  19 +++------------
>  sc/source/core/tool/detfunc.cxx                              |   2 +-
>  sc/source/core/tool/interpr2.cxx                             |  22 +++---------------
>  sc/source/filter/excel/excdoc.cxx                            |  17 ++++++++++++--
>  sc/source/filter/excel/xetable.cxx                           |   6 ++---
>  sc/source/filter/inc/excdoc.hxx                              |   5 ++++
>  sc/source/filter/xml/xmlexprt.cxx                            |  18 +++++++--------
>  sc/source/ui/Accessibility/AccessibleDocumentPagePreview.cxx |   4 ++--
>  sc/source/ui/docshell/docfunc.cxx                            |   8 +++----
>  sc/source/ui/docshell/docsh.cxx                              |  12 ++++------
>  sc/source/ui/drawfunc/futext3.cxx                            |   6 ++---
>  sc/source/ui/navipi/content.cxx                              |  37 ++++++++++++++---------------
>  sc/source/ui/undo/undoblk3.cxx                               |   2 +-
>  sc/source/ui/undo/undocell.cxx                               |  12 +++++-----
>  sc/source/ui/unoobj/cellsuno.cxx                             |  76 +++++++++++++++++++++++++++++-------------------------------
>  sc/source/ui/unoobj/docuno.cxx                               |  21 +++++++----------
>  sc/source/ui/unoobj/editsrc.cxx                              |   4 ++--
>  sc/source/ui/unoobj/notesuno.cxx                             |   4 ++--
>  sc/source/ui/view/cellsh.cxx                                 |  25 +++++++++++---------
>  sc/source/ui/view/cellsh1.cxx                                |   2 +-
>  sc/source/ui/view/drawview.cxx                               |   2 +-
>  sc/source/ui/view/gridwin.cxx                                |   2 +-
>  sc/source/ui/view/gridwin5.cxx                               |   2 +-
>  sc/source/ui/view/output.cxx                                 |   8 +++++--
>  sc/source/ui/view/printfun.cxx                               |  26 ++++++++++-----------
>  sc/source/ui/view/viewfun6.cxx                               |   2 +-
>  43 files changed, 625 insertions(+), 532 deletions(-)
Comment 13 Ben Elliston 2019-03-27 02:37:20 UTC
Still happening in 6.2.0.3. In my case, this problem causes lots of little red artifacts all over my spreadsheets. I think it's a minor problem, not a trivial one.
Comment 14 Justin L 2021-11-26 16:43:20 UTC
repro 7.3+
Comment 15 Justin L 2021-12-02 10:50:40 UTC
*** Bug 133153 has been marked as a duplicate of this bug. ***
Comment 16 Justin L 2021-12-17 09:54:02 UTC
proposed fix at http://gerrit.libreoffice.org/c/core/+/127001
Comment 17 Commit Notification 2021-12-17 11:41:40 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b58dbb862296b63f3f2395c59d30fba40fa5f59f

tdf#58125 sc: don't show comment notifier for hidden columns

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Buovjaga 2021-12-17 12:45:28 UTC
Verified, thanks

Arch Linux 64-bit
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: b58dbb862296b63f3f2395c59d30fba40fa5f59f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 17 December 2021
Comment 19 Commit Notification 2021-12-17 22:06:13 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/13814db571b1d08a7f301cd2de3618a387d9dfe4

tdf#58125 sc: don't show comment notifier for hidden columns

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.