tdf#58125 sc: don't show comment notifier for hidden columns

This fixes a LO 3.6-ish regression.

Things have changed a lot since then. I assume that pCell
was empty when it was hidden. The test for pCell was
removed in commit c06dbbe7594c2a0b5a5b19f8e183d9c421e6e094,
which was in the range that bibisect suggested.

Change-Id: I0af137358335a808de901111a71f5c113fabcf24
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/127001
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit b58dbb862296b63f3f2395c59d30fba40fa5f59f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126975
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>